<resources>
    <string name="app_name">SNTF</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="schedules">Schedules</string>
    <string name="about">About</string>
    <string name="report">Report</string>
    <string name="reservations">Reservations</string>
    <string name="user_benefits">User benefits</string>
    <string name="railways_map">Railways map</string>
    <string name="news">News</string>
    <string name="notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>